--- a/index.html
+++ b/index.html
@@ -40,38 +40,31 @@
     <section class="imagesFlex">
         <div class="imgBox">
             <div>
-                <img src="./images/mia2.jpg" alt="Bay view">
+                <img src="images/mia6.jpg" alt="Bay view">
                 <p>Brickell</p>
             </div>
             <div>
-                <img src="images/mia3.jpg" alt="Miami">
+                <img src="images/mia10.jpg" alt="Miami">
                 <p>Miami</p>
             </div>
             <div>
-                <img src="images/mia4.jpg" alt="Bay view">
+                <img src="images/mia1.jpg" alt="Bay view">
                 <p>Brickell</p>
             </div>
             <div>
                 <img src="images/mia5.jpg" alt="Miami">
                 <p>Miami</p>
             </div>
-            <div>
-                <img src="images/mia6.jpg" alt="Bay view">
-                <p>Brickell</p>
-            </div>
-            <div>
-                <img src="images/mia7.jpg" alt="Miami">
-                <p>Miami</p>
-            </div>
-            <div>
-                <img src="images/mia8.jpg" alt="Bay view">
-                <p>Brickell</p>
-            </div>
-            <div>
-                <img src="images/mia9.jpg" alt="Miami">
-                <p>Miami</p>
-            </div>
         </div>
+
+        <section class="lower">
+            <h2>
+                Like what you see???
+            </h2>
+            <nav> 
+                <a id="button">Contact Me</a>
+            </nav>
+        </section>
         
         
 
